--- a/hola.html
+++ b/hola.html
@@ -7,3 +7,53 @@
     hola mundo 3 
   </h2>
 </html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Tabla de Ejemplo</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 60%;
+            margin: 20px auto;
+            font-family: Arial, sans-serif;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: center;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+    </style>
+</head>
+<body>
+
+    <h2 style="text-align:center;">Tabla de Personas</h2>
+
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>Nombre</th>
+            <th>Edad</th>
+            <th>Ciudad</th>
+        </tr>
+        <tr><td>1</td><td>Ana</td><td>25</td><td>Madrid</td></tr>
+        <tr><td>2</td><td>Juan</td><td>30</td><td>Barcelona</td></tr>
+        <tr><td>3</td><td>María</td><td>22</td><td>Valencia</td></tr>
+        <tr><td>4</td><td>Carlos</td><td>28</td><td>Sevilla</td></tr>
+        <tr><td>5</td><td>Lucía</td><td>35</td><td>Bilbao</td></tr>
+        <tr><td>6</td><td>Pedro</td><td>27</td><td>Zaragoza</td></tr>
+        <tr><td>7</td><td>Sofía</td><td>24</td><td>Málaga</td></tr>
+        <tr><td>8</td><td>Diego</td><td>31</td><td>Granada</td></tr>
+        <tr><td>9</td><td>Elena</td><td>29</td><td>Alicante</td></tr>
+        <tr><td>10</td><td>Javier</td><td>33</td><td>Toledo</td></tr>
+    </table>
+
+</body>
+</html>
