--- a/hola.html
+++ b/hola.html
@@ -57,3 +57,38 @@
 
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Tabla Básica</title>
+</head>
+<body>
+
+<h2>Tabla de Productos</h2>
+
+<table border="1">
+    <tr>
+        <th>ID</th>
+        <th>Producto</th>
+        <th>Precio</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>Laptop</td>
+        <td>$800</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>Mouse</td>
+        <td>$20</td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>Teclado</td>
+        <td>$35</td>
+    </tr>
+</table>
+
+</body>
+</html>
