--- a/hola.html
+++ b/hola.html
@@ -92,3 +92,61 @@
 
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Tabla con Colores</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        table {
+            border-collapse: collapse;
+            width: 70%;
+            margin: 20px auto;
+        }
+        th {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px;
+        }
+        td {
+            padding: 8px;
+            text-align: center;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+        tr:nth-child(odd) {
+            background-color: #e6f7ff;
+        }
+        tr:hover {
+            background-color: #ffeb99;
+        }
+    </style>
+</head>
+<body>
+
+<h2 style="text-align:center;">Tabla de Estudiantes</h2>
+
+<table border="1">
+    <tr>
+        <th>ID</th>
+        <th>Nombre</th>
+        <th>Nota</th>
+    </tr>
+    <tr><td>1</td><td>Ana</td><td>9.5</td></tr>
+    <tr><td>2</td><td>Juan</td><td>8.7</td></tr>
+    <tr><td>3</td><td>María</td><td>9.0</td></tr>
+    <tr><td>4</td><td>Carlos</td><td>7.8</td></tr>
+    <tr><td>5</td><td>Lucía</td><td>8.9</td></tr>
+    <tr><td>6</td><td>Pedro</td><td>7.5</td></tr>
+    <tr><td>7</td><td>Sofía</td><td>9.2</td></tr>
+    <tr><td>8</td><td>Diego</td><td>8.3</td></tr>
+    <tr><td>9</td><td>Elena</td><td>9.8</td></tr>
+    <tr><td>10</td><td>Javier</td><td>8.0</td></tr>
+</table>
+
+</body>
+</html>
